# correct-tds2

./: .gitignore  LICENSE  README.md  config_filters.json  pyproject.toml
thz_analyzer/: config_filters.json  main_app.py  theme.py
thz_analyzer/core/: backend.py  filters.py  io.py  optimization.py  plotting.py
